--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,14 +1,17 @@
 <div class="container text-center">
     <div class="navBar">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h3 id="dStream">DownStream</h3>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h4 id="streams">Streams</h4>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h4 id="rafts">Rafts</h4>
+            </div>
+            <div class="col-md-2">
+                <h6 id="logout">Logout</h6>
             </div>
         </div>
     </div>
