--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>DownStream</title>
+    <link rel="stylesheet" href="css/loader.css">
     <link rel='icon' href='img/placeholderFav.png' type='image/x-icon'>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css">
+    <title>DownStream</title>
 </head>
 
 <body>
