--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,33 +1,15 @@
-<div class="container text-center">
-    <div class="navBar">
-        <div class="row">
-            <div class="col-md-3">
-                <h3 id="dStream">DownStream</h3>
-            </div>
-            <div class="col-md-3">
-                <h4 id="streams">Streams</h4>
-            </div>
-            <div class="col-md-3">
-                <h4 id="rafts">Rafts</h4>
-            </div>
-            <div class="col-md-2">
-                <h6 id="logout">Logout</h6>
-            </div>
-        </div>
+{{> navbar/navbar-block}}
+<div class="welcomeBar">
+    <h2 class="welcomeLine">Welcome Back {{user.first_name}} {{user.last_name}}</h2>
+</div>
+<div class="row accountRow">
+    <div class="col-md-4">
+        <h3 id="updateUser"><a href="/account">Update Account Info</a></h3>
     </div>
-    <div class="welcomeBar">
-        <h2 class="welcomeLine">Welcome Back {{user.first_name}} {{user.last_name}}</h2>
+    <div class="col-md-4">
+        <h3 id="streamsPage">Total Streams: {num}</h3>
     </div>
-    <div class="row accountRow">
-        <div class="col-md-4">
-            <h3 id="updateUser">Update Account Info</h3>
-        </div>
-        <div class="col-md-4">
-            <h3 id="streamsPage">Total Streams: {num}</h3>
-        </div>
-        <div class="col-md-4">
-            <h3 id="raftsPage">Total Rafts: {num}</h3>
-        </div>
+    <div class="col-md-4">
+        <h3 id="raftsPage">Total Rafts: {num}</h3>
     </div>
-
 </div>
