--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,9 +7,9 @@
         <h3 id="updateUser"><a href="/account">Update Account Info</a></h3>
     </div>
     <div class="col-md-4">
-        <h3 id="streamsPage">Total Streams: {num}</h3>
+        <h3 id="streamsPage"><a href="/loader/streams"> Total Streams: {num}</a></h3>
     </div>
     <div class="col-md-4">
-        <h3 id="raftsPage">Total Rafts: {num}</h3>
+        <h3 id="raftsPage"><a href="/loader/rafts">Total Rafts: {num}</a></h3>
     </div>
 </div>
