--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -1,18 +1,23 @@
-    {{> navbar/navbar-block}}
-    <div class="row loaderRow">
-        <div class="col-md-4">
-            <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy">
-                <ul>
-                    {{> streams/streams-block}}
-                </ul>
-            </div>
-        </div>
-        <div class="col-md-7">
-            <div class="contentBox">
-
-            </div>
+{{> navbar/navbar-block}}
+<div class="row loaderRow">
+    <div class="col-md-4">
+        <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy">
+            <ul>
+                {{#if streams}}
+                {{> streams/streams-block}}
+                {{/if}}
+                {{#if rafts}}
+                {{> rafts/rafts-block}}
+                {{/if}}
+            </ul>
         </div>
     </div>
+    <div class="col-md-7">
+        <div class="contentBox">
+
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
