--- a/views/partials/navbar/navbar-block.handlebars
+++ b/views/partials/navbar/navbar-block.handlebars
@@ -4,10 +4,10 @@
             <h3 id="dStream"><a href="/dashboard">DownStream</a></h3>
         </div>
         <div class="col-md-3">
-            <h4 id="streams">Streams</h4>
+            <h4 id="streams"><a href="/loader/streams">Streams</a></h4>
         </div>
         <div class="col-md-3">
-            <h4 id="rafts">Rafts</h4>
+            <h4 id="rafts"><a href="/loader/rafts">Rafts</a></h4>
         </div>
         <div class="col-md-2">
             <h6 id="logout">Logout</h6>
