--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -43,3 +43,12 @@
     margin-left: 1em;
     font-weight: 600;
 }
+.streamTotal{
+    width: 100%;
+    height: 8em;
+    display: block;
+    position: relative;
+    background-color: whitesmoke;
+    margin-top: 1em;
+    border-radius: .5rem;
+}
