--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,10 @@
         <h3 id="updateUser"><a href="/account">Update Account Info</a></h3>
     </div>
     <div class="col-md-4">
-        <h3 id="streamsPage"><a href="/loader/streams"> Total Streams: {num}</a></h3>
+        <h3 id="streamsPage"><a href="/loader/streams"> Total Streams:</a></h3>
+        <div class="streamTotal">
+            <h1>1</h1>
+        </div>
     </div>
     <div class="col-md-4">
         <h3 id="raftsPage"><a href="/loader/rafts">Total Rafts: {num}</a></h3>
