--- a/views/partials/navbar/navbar-block.handlebars
+++ b/views/partials/navbar/navbar-block.handlebars
@@ -1,7 +1,7 @@
 <div class="navBar">
     <div class="row">
         <div class="col-md-3">
-            <h3 id="dStream"><a href="/dashboard">DownStream</a></h3>
+            <h3 id="dStream"><a href="/dashboard">downStream</a></h3>
         </div>
         <div class="col-md-3">
             <h4 id="streams"><a href="/loader/streams">Streams</a></h4>
