working in dropzone

--- a/views/partials/rafts/dropzone-block.handlebars
+++ b/views/partials/rafts/dropzone-block.handlebars
@@ -1,5 +1,5 @@
 		<div>
-			<form id="upload-widget" method="post" action="api/s3/upload" class="dropzone">
+			<form id="upload-widget" method="post" action="../../api/s3/upload" class="dropzone">
 				<div class="fallback">
 					<input name="file" type="file" />
 				</div>
