--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
     <link rel='icon' href='img/placeholderFav.png' type='image/x-icon'>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/loader.css">
     <title>DownStream</title>
