rafts count loads to page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,7 +12,8 @@
         </div>
     </div>
     <div class="col-md-4">
-        <h3 id="raftsPage"><a href="/loader/rafts">Total Rafts: {num}</a></h3>
+        <h3 id="raftsPage"><a href="/loader/rafts">Total Rafts:</a></h3>
+        <div class="raftTotal"></div>
     </div>
 
 </div>
