--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,3 +153,15 @@ a:hover{
     margin-left: 9rem;
     width: 100%;
 }
+.streamTotal, .raftTotal{
+    width: 100%;
+    height: 8em;
+    display: block;
+    position: relative;
+    background-color: whitesmoke;
+    margin-top: 1em;
+    border-radius: .5rem;
+}
+.counts{
+    font-size: 6em;
+}
