--- a/views/partials/streams/streamsMessage-block.handlebars
+++ b/views/partials/streams/streamsMessage-block.handlebars
@@ -1,13 +1,3 @@
 <div class="row">
-    <div class="col-md-1 searchLabel">
-        <label for="toId">Search:</label>
-    </div>
-    <div class="col-md">
-        <input type="text" id="toId" placeholder="Names">
-    </div>
-</div>
-<div class="row">
-    <div class="messageBlock">
-        <textarea name="messageBlock" id="messagesId" cols="30" rows="10"></textarea>
-    </div>
+    <h1 class="messageLine">Click On a Message to the Left</h1>
 </div>
