--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -25,4 +25,4 @@
     </div>
 </div>
 <script src="js/dropZone.js"></script>
-{{!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> --}}
+<script src="js/streams.js"></script>
