added controllers for messages, streams, user-streams updated and created user-stream process

--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -29,5 +29,5 @@
 
     </div>
 </div>
-<script src="js/dropZone.js"></script>
-<script src="js/streams.js"></script>
+<script src="/js/dropZone.js"></script>
+<script src="/js/userStream.js"></script>
