--- a/views/partials/navbar/navbar-block.handlebars
+++ b/views/partials/navbar/navbar-block.handlebars
@@ -10,7 +10,7 @@
             <h4 id="rafts"><a href="/loader/rafts">Rafts</a></h4>
         </div>
         <div class="col-md-2">
-            <h6 id="logout">Logout</h6>
+            <h6 id="logout"><a href="/api/auth/logout">Logout</a></h6>
         </div>
     </div>
 </div>
