--- a/views/partials/streams/streamsMessage-block.handlebars
+++ b/views/partials/streams/streamsMessage-block.handlebars
@@ -1,3 +1,7 @@
+<div>
+    <button class="createStream">Create Stream</button>
+</div>
 <div class="row">
     <h1 class="messageLine">Click On a Message to the Left</h1>
 </div>
+
