--- a/views/partials/rafts/rafts-block.handlebars
+++ b/views/partials/rafts/rafts-block.handlebars
@@ -1,4 +1,9 @@
-<li class="streamId">
+<div class="liElements">
+    
+</div>
+
+
+{{!-- <li class="streamId">
     <h4>Raft Document Title</h4>
 </li>
 <li class="streamId">
@@ -15,4 +20,4 @@
 </li>
 <li class="streamId">
  <h4>Raft Document Title</h4>
-</li>
+</li> --}}
