--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:600&display=swap" rel="stylesheet">
     <link rel='icon' href='img/placeholderFav.png' type='image/x-icon'>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/rafts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
