--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -29,5 +29,7 @@
 
     </div>
 </div>
-<script src="js/dropZone.js"></script>
+<script src="../js/dropZone.js"></script>
+<script src="../js/rafts.js"></script>
+
 {{!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> --}}
