--- a/views/partials/streams/streams-block.handlebars
+++ b/views/partials/streams/streams-block.handlebars
@@ -1,24 +1,24 @@
 <li class="streamId">
-    <h4>Message With ....</h4>
+    <h4>Stream 1</h4>
     <p>message details. .... blah. blah. blah. blah</p>
 </li>
 <li class="streamId">
-    <h4>Message With ....</h4>
+    <h4>Stream 2</h4>
     <p>message details. .... blah. blah. blah. blah</p>
 </li>
 <li class="streamId">
-    <h4>Message With ....</h4>
+    <h4>Stream 3</h4>
     <p>message details. .... blah. blah. blah. blah</p>
 </li>
 <li class="streamId">
-    <h4>Message With ....</h4>
+    <h4>Stream 4</h4>
     <p>message details. .... blah. blah. blah. blah</p>
 </li>
 <li class="streamId">
-    <h4>Message With ....</h4>
+    <h4>stream 5</h4>
     <p>message details. .... blah. blah. blah. blah</p>
 </li>
 <li class="streamId">
-    <h4>Message With ....</h4>
+    <h4>stream 6</h4>
     <p>message details. .... blah. blah. blah. blah</p>
 </li>
