added stream creation and user linking to streams

--- a/views/partials/streams/streamsMessage-block.handlebars
+++ b/views/partials/streams/streamsMessage-block.handlebars
@@ -1,7 +1,7 @@
 <div id="createStream" class="row">
     <form id="createStreamForm">
         <span><input id="streamUser" type="text" placeholder="Stream Users"></span>
-        <button class="newStream">Create</button>
+        <button class="submit" class="newStream">Create</button>
     </form>
     <div class="row" id="downstreamUser" data-UserId="">
         <div class="col-md-7">
