--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -30,5 +30,5 @@
         </div>
     </div>
 </div>
-<script src="/js/dropZone.js"></script>
-<script src="/js/userStream.js"></script>
+{{!-- <script src="../js/dropZone.js"></script> --}}
+<script src="../js/userStream.js"></script>
