resolving merge conflicts

--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -31,4 +31,5 @@
     </div>
 </div>
 {{!-- <script src="../js/dropZone.js"></script> --}}
+<script src="../js/rafts.js"></script>
 <script src="../js/userStream.js"></script>
