lis will load after data is recieved

--- a/views/partials/streams/streamsMessage-block.handlebars
+++ b/views/partials/streams/streamsMessage-block.handlebars
@@ -3,7 +3,35 @@
         <span><input id="streamUser" type="text" placeholder="Stream Users"></span>
         <button class="submit" class="newStream">Create</button>
     </form>
-    <div class="row" id="downstreamUser" data-UserId="">
+    <div id="dynamicLIs">
+        <ul id="eachUser">
+            <li>
+                <div class="row" id="downstreamUser" data-UserId="">
+                    <div class="col-md-7">
+                        <h4 class="userTag">DownStream User</h4>
+                    </div>
+                </div>
+                    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
+            </li>
+            <li>
+                <div class="row" id="downstreamUser" data-UserId="">
+                    <div class="col-md-7">
+                        <h4 class="userTag">DownStream User</h4>
+                    </div>
+                </div>
+                    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
+            </li>
+            <li>
+                <div class="row" id="downstreamUser" data-UserId="">
+                    <div class="col-md-7">
+                        <h4 class="userTag">DownStream User</h4>
+                    </div>
+                </div>
+                    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
+            </li>
+        </ul>
+    </div>
+    {{!-- <div class="row" id="downstreamUser" data-UserId="">
         <div class="col-md-7">
             <h4 class="userTag">DownStream User</h4>
         </div>
@@ -37,7 +65,7 @@
         </div>
 
     </div>
-    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-    
+    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button> --}}
+
 
 </div>
