converted handlebars to html files

--- a/views/loader.handlebars
+++ b/views/loader.handlebars
@@ -33,3 +33,4 @@
 {{!-- <script src="../js/dropZone.js"></script> --}}
 <script src="../js/rafts.js"></script>
 <script src="../js/userStream.js"></script>
+<script src="../js/streams.js"></script>
