--- a/views/partials/streams/streamsMessage-block.handlebars
+++ b/views/partials/streams/streamsMessage-block.handlebars
@@ -6,66 +6,9 @@
     <div id="dynamicLIs">
         <ul id="eachUser">
             <li>
-                <div class="row" id="downstreamUser" data-UserId="">
-                    <div class="col-md-7">
-                        <h4 class="userTag">DownStream User</h4>
-                    </div>
-                </div>
-                    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-            </li>
-            <li>
-                <div class="row" id="downstreamUser" data-UserId="">
-                    <div class="col-md-7">
-                        <h4 class="userTag">DownStream User</h4>
-                    </div>
-                </div>
-                    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-            </li>
-            <li>
-                <div class="row" id="downstreamUser" data-UserId="">
-                    <div class="col-md-7">
-                        <h4 class="userTag">DownStream User</h4>
-                    </div>
-                </div>
-                    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
+           {{stream}}
+           
             </li>
         </ul>
     </div>
-    {{!-- <div class="row" id="downstreamUser" data-UserId="">
-        <div class="col-md-7">
-            <h4 class="userTag">DownStream User</h4>
-        </div>
-
-    </div>
-    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-    <div class="row" id="downstreamUser" data-UserId="">
-        <div class="col-md-7">
-            <h4 class="userTag">DownStream User</h4>
-        </div>
-
-    </div>
-    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-    <div class="row" id="downstreamUser" data-UserId="">
-        <div class="col-md-7">
-            <h4 class="userTag">DownStream User</h4>
-        </div>
-
-    </div>
-    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-    <div class="row" id="downstreamUser" data-UserId="">
-        <div class="col-md-7">
-            <h4 class="userTag">DownStream User</h4>
-        </div>
-
-    </div>
-    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button>
-    <div class="row" id="downstreamUser" data-UserId="">
-        <div class="col-md-7">
-            <h4 class="userTag">DownStream User</h4>
-        </div>
-
-    </div>
-    <button class="addUserBtn"><i class="fas fa-user-plus"></i></button> --}}
-
-
 </div>
